tests/miniJava/neg/000786_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = false System.out.println ; } }
